--- a/environment.yaml
+++ b/environment.yaml
@@ -43,4 +43,5 @@ dependencies:
   - bioconductor-multtest
   - libsodium
   - bioconductor-complexheatmap
+  - bioconductor-interactivecomplexheatmap
 
