new feature:DEBrowser

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -34,6 +34,10 @@ server {
     app_dir /opt/nasqar_build/GeneCountMerger;
     log_dir /opt/nasqar_build/logs;
     }
+  location /DEBrowser{
+    app_dir /opt/nasqar_build/debrowser-master/R;
+    log_dir /opt/nasqar_build/logs;
+    }
   location /deseq2shiny{
     app_dir /opt/nasqar_build/deseq2shiny;
     log_dir /opt/nasqar_build/logs;
