--- a/environment.yaml
+++ b/environment.yaml
@@ -4,7 +4,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - r-base==4.2.3 
+  - r-base==4.2.2 
   - r-shiny
   - bioconductor-clusterprofiler
   - r-dt
@@ -45,4 +45,5 @@ dependencies:
   - libsodium
   - bioconductor-complexheatmap
   - bioconductor-interactivecomplexheatmap
+  - bioconductor-debrowser
 
