ATACseqQCShniy:initial commit

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -42,6 +42,10 @@ server {
     app_dir /opt/nasqar_build/deseq2shiny;
     log_dir /opt/nasqar_build/logs;
     }
+  location /ATACseqQCShniy{
+    app_dir /opt/nasqar_build/ATACseqQCShniy;
+    log_dir /opt/nasqar_build/logs;
+    }
   location /DEApp{
     app_dir /opt/nasqar_build/DEApp;
     log_dir /opt/nasqar_build/logs;
