ATACseqQCShniy:initial commit

--- a/environment.yaml
+++ b/environment.yaml
@@ -46,4 +46,5 @@ dependencies:
   - bioconductor-complexheatmap
   - bioconductor-interactivecomplexheatmap
   - bioconductor-debrowser
+  - bioconductor-rsamtools
 
