dada2Shiny New Application

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -46,6 +46,11 @@ server {
     app_dir /opt/nasqar_build/ATACseqQCShniy;
     log_dir /opt/nasqar_build/logs;
     }
+
+  location /DADA2Shiny{
+    app_dir /opt/nasqar_build/dada2Shiny;
+    log_dir /opt/nasqar_build/logs;
+  }
   location /DEApp{
     app_dir /opt/nasqar_build/DEApp;
     log_dir /opt/nasqar_build/logs;
