--- a/environment.yaml
+++ b/environment.yaml
@@ -47,4 +47,5 @@ dependencies:
   - bioconductor-interactivecomplexheatmap
   - bioconductor-debrowser
   - bioconductor-rsamtools
+  - bioconductor-dada2
 
