New shiny app animalcules added

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -38,6 +38,11 @@ server {
     app_dir /opt/nasqar_build/debrowser-master/R;
     log_dir /opt/nasqar_build/logs;
     }
+
+    location /animalcules{
+    app_dir /opt/nasqar_build/animalcules/;
+    log_dir /opt/nasqar_build/logs;
+    }
   location /deseq2shiny{
     app_dir /opt/nasqar_build/deseq2shiny;
     log_dir /opt/nasqar_build/logs;
