--- a/environment.yaml
+++ b/environment.yaml
@@ -48,4 +48,7 @@ dependencies:
   - bioconductor-debrowser
   - bioconductor-rsamtools
   - bioconductor-dada2
+  - bioconductor-multiassayexperiment
+  - bioconductor-biomformat
+  - r-vegan
 
